--- a/.github/workflows/format_otr.yml
+++ b/.github/workflows/format_otr.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         mkdir -p review
         find . -type f -name "*.otr" -exec sh -c 'touch "review/`basename {} .otr`.txt" && export-txt {}  >  "review/`basename {} .otr`.txt" ' \;
+        find . -type f -name "*.otr" -exec sh -c 'touch "review/{}" && format-otr {}  >  "review/{}" ' \;
 
     - name: Test Coverage
       run: |
