--- a/.github/workflows/format_otr.yml
+++ b/.github/workflows/format_otr.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   export_otr:
@@ -32,8 +32,3 @@ jobs:
         mkdir -p review
         find . -type f -name "*.otr" -exec sh -c 'touch "review/`basename {} .otr`.txt" && export-txt {}  >  "review/`basename {} .otr`.txt" ' \;
         find . -type f -name "*.otr" -exec sh -c 'touch "review/{}" && format-otr {}  >  "review/{}" ' \;
-
-    - name: Test Coverage
-      run: |
-        coverage run -m pytest
-        coverage report -m
