--- a/.github/workflows/format_otr.yml
+++ b/.github/workflows/format_otr.yml
@@ -32,3 +32,5 @@ jobs:
         mkdir -p review
         find . -type f -name "*.otr" -exec sh -c 'touch "review/`basename {} .otr`.txt" && export-txt {}  >  "review/`basename {} .otr`.txt" ' \;
         find . -type f -name "*.otr" -exec sh -c 'touch "review/{}" && format-otr {}  >  "review/{}" ' \;
+        git add .
+        git commit -m "add or updated review dir"
