--- a/.github/workflows/format_otr.yml
+++ b/.github/workflows/format_otr.yml
@@ -32,5 +32,9 @@ jobs:
         mkdir -p review
         find . -type f -name "*.otr" -exec sh -c 'touch "review/`basename {} .otr`.txt" && export-txt {}  >  "review/`basename {} .otr`.txt" ' \;
         find . -type f -name "*.otr" -exec sh -c 'touch "review/{}" && format-otr {}  >  "review/{}" ' \;
-        git add .
-        git commit -m "add or updated review dir"
+    
+    - name: Git Auto Commit
+      uses: stefanzweifel/git-auto-commit-action@v4.16.0
+      with:
+        commit_message: Added or updated review dir
+
